test/types/integral/integralvariable2.good
integralvariable2.chpl:1: error: cannot default-initialize a variable with generic type
integralvariable2.chpl:1: note: 'r' has generic type 'integral'
integralvariable2.chpl:1: note: cannot find initialization point to split-init this variable
integralvariable2.chpl:2: note: 'r' is used here before it is initialized
