test/types/integral/integralvariable2.chpl
var r: integral;
writeln(r);
